# whichPlates

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  explanation.html  how-to-guides.html  index.html  mkdocs.yaml  objects.inv  pyproject.toml  reference.html  setup.cfg  tutorials.html  whichPlates.py
.github/workflows/: actions.yml  build_release.yml  develop.yml  documentation.yml  lint.yml  main.yml  orchestrator.yml  publish.yml  release.yml  test.yml  test_build_dev.old  test_build_main.old  update_coverage.yml
docs/: index.md  reference.md
search/: search_index.json
src/which_plates/: __init__.py  functions.py  main.py  version.py
src/which_plates/tests/: test_functions.py  test_main.py  test_which_plates.py
tests/: test_functions.py  test_main.py
