[metadata]
name = which_plates
version = attr: which_plates.__version__
author = Ian Day
author_email = ian@ianday.me
description = calculate plates needed based off one rep max
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iandday/whichPlates
project_urls =
    Bug Tracker = https://github.com/iandday/whichPlates/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    which-plates = which_plates.main:main

[options.extras_require]
dev = 
    mypy
    flake8
    pylint
    isort
    safety
    pytest
    pytest-cov
    build
    twine
